# riku_chip

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml
docs/: integracion_gds_estado.md
gds-renderer/: Cargo.toml
planificacion/: decision_migracion_rust.md  decisiones_tecnicas.md  estado_actual.md  historial_conversacion.md  plan_migracion_rust.md  (+7 more)
riku/: Cargo.toml  README.md  cli.py
riku/adapters/: xschem_adapter.py  xschem_driver.py
riku/core/: driver.py  models.py  registry.py  semantic_diff.py  svg_annotator.py
riku/docs/: spec-status-log.md
riku/parsers/: xschem.py
riku/src/: cli.rs  main.rs
riku/src/adapters/: mod.rs  xschem_adapter.rs  xschem_driver.rs
riku/src/cli/: commands.rs  doctor.rs  mod.rs  shell.rs
riku/src/cli/format/: common.rs  diff_text.rs  json.rs  log_json.rs  log_text.rs  mod.rs  status_text.rs  text.rs
riku/src/core/: analyzer.rs  diff_view.rs  driver.rs  error.rs  git_service.rs  log.rs  mod.rs  models.rs  ports.rs  semantic_diff.rs  status.rs  summary.rs  svg_annotator.rs
riku/src/core/analysis/: analyzer.rs  blob_io.rs  diff_view.rs  log.rs  mod.rs  pipeline.rs  status.rs  summary.rs
riku/src/core/analysis/summary/: build.rs  labels.rs  mod.rs  types.rs
riku/src/core/domain/: driver.rs  error.rs  git_types.rs  mod.rs  models.rs  ports.rs
riku/src/core/git/: blob.rs  branch.rs  commit_log.rs  diff.rs  git_service.rs  helpers.rs  mod.rs  working_tree.rs
riku/src/core/rendering/: mod.rs  svg_annotator.rs
riku/src/parsers/: mod.rs  xschem.rs
riku/tests/: basic.rs  parity.rs  stress.rs
(+54 files in other folders)
